Файлы помещены в папки

--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@
         </form>
     </div>
 </body>
-     <script src="JavaScript.js"></script></body>
+     <script src="javascript/script.js"></script></body>
 </html>
