--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                     <div class="col-xs-4 col-md-4">
                         <select class="form-control">
                             <option value="Год">Год</option>
-                            <option value="2016">2016</option>
+                            <option value="2018">2018</option>
+                            <option value="2019">2019</option>
+                            <option value="2020">2020</option>
                         </select>
                     </div>
                 </div>
@@ -85,6 +87,7 @@
                 <div class="row form-group">
                     <div class="col-xs-6 col-md-6">
                         <select class="form-control">
+                            <option value="Город">Выберите город</option>
                             <option>Москва</option>
                             <option>Санкт-Петербург</option>
                             <option>Казань</option>
