Сделан растягивающийся фон

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid h-100">
         <div class="row">
             <div class="col-md-4"> </div>
-            <div class="col-md-4 border rounded p-3 m-4 bg-white h-100 ">
+            <div class="col-md-4 border rounded p-4 m-8 bg-white card d-flex">
                 <div class="form-group">
                     <h4 class="text-center">Регистрация</h4>
                     <label for="name">Ваше имя:</label>
