--- a/index.html
+++ b/index.html
@@ -2,31 +2,33 @@
 <html lang="ru">
 <head>
     <meta charset="ru">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
     <title>Обучение</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <form name="form" action="" onsubmit="return validate();">
-        <div class="container-fluid h-100">
-            <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4 border rounded p-4 m-8 bg-white card d-flex">
+    <div class="container-fluid h-100">
+        <div class="row">
+            <div class="col-md-4"> </div>
+            <div class="col-md-4 p-4 m-4 d-flex">
+                <form class="form border rounded p-3 card " id="myForm" role="form">
+                    <h4 class="text-center">Регистрация</h4>
+                    <hr>
                     <div class="form-group">
-                        <h4 class="text-center">Регистрация</h4>
                         <label for="name">Ваше имя:</label>
-                        <input type="name" name="name" class="form-control" id="name">
+                        <input type="text" name="name" class="form-control" id="name">
                     </div>
                     <div class="form-group">
-                        <label for="lastname">Фамилия:</label>
-                        <input type="lastname" name="lastname" class="form-control" id="last">
+                        <label>Фамилия:</label>
+                        <input type="text" name="lastname" class="form-control" id="last">
                     </div>
                     <label for="date">Дата рождения</label>
                     <div class="row">
                         <div class="col-xs-4 col-md-4">
-                            <select class="form-control" id="day">
+                            <select class="form-control" name="day" id="day">
                                 <option value="День">День</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -62,8 +64,11 @@
                             </select>
                         </div>
                         <div class="col-xs-4 col-md-4">
-                            <select class="form-control" id="month">
+                            <select class="form-control" name="month" id="month">
                                 <option value="Месяц">Месяц</option>
+                                <option value="Январь">Январь</option>
+                                <option value="Февраль">Февраль</option>
+                                <option value="Март">Март</option>
                                 <option value="Апрель">Апрель</option>
                                 <option value="Май">Май</option>
                                 <option value="Июнь">Июнь</option>
@@ -76,7 +81,7 @@
                             </select>
                         </div>
                         <div class="col-xs-4 col-md-4">
-                            <select class="form-control" id="year">
+                            <select class="form-control" name="year" id="year">
                                 <option value="Год">Год</option>
                                 <option value="2018">2018</option>
                                 <option value="2019">2019</option>
@@ -84,11 +89,11 @@
                             </select>
                         </div>
                     </div>
-                    <label>Город</label>
+                    <br>
                     <div class="row form-group">
                         <div class="col-xs-6 col-md-6">
                             <select class="form-control">
-                                <option value="Город">Выберите город</option>
+                                <option value="Город">Город</option>
                                 <option>Москва</option>
                                 <option>Санкт-Петербург</option>
                                 <option>Казань</option>
@@ -96,11 +101,13 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary btn-block">Отправить</button>
-                </div>
-                <div class="col-md-4"> </div>
+                </form>
             </div>
+            <div class="col-md-4"> </div>
         </div>
-        </form>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
-<script src="javascript/script.js"></script></body>
 </html>
