--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-4"> </div>
             <div class="col-md-4 p-4 m-4 d-flex">
-                <form class="form border rounded p-3 card " id="myForm" role="form">
+                <form class="form border rounded p-4 card " id="myForm" role="form">
                     <h4 class="text-center">Регистрация</h4>
                     <hr>
                     <div class="form-group">
@@ -89,11 +89,11 @@
                             </select>
                         </div>
                     </div>
-                    <br>
+                    <label>Город</label>
                     <div class="row form-group">
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-12 col-md-12">
                             <select class="form-control">
-                                <option value="Город">Город</option>
+                                <option value="Город">Выберите город</option>
                                 <option>Москва</option>
                                 <option>Санкт-Петербург</option>
                                 <option>Казань</option>
