--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="ru">
 <head>
     <meta charset="ru">
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <title>Обучение</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <!-- The jQuery library is a prerequisite for all jqSuite products -->
+    <script type="text/ecmascript" src="jqGrid/js/jquery-1.7.2.min.js"></script>
+    <!-- This is the Javascript file of jqGrid -->
+    <script type="text/ecmascript" src="jqGrid/js/jquery.jqGrid.min.js"></script>
+    <!-- This is the localization file of the grid controlling messages, labels, etc.
+    <!-- We support more than 40 localizations -->
+    <script type="text/ecmascript" src="jqGrid/js/i18n/grid.locale-en.js"></script>
+    <!-- A link to a jQuery UI ThemeRoller theme, more than 22 built-in and many more custom -->
+    <link rel="stylesheet" type="text/css" media="screen" href="jqGrid/css/jquery-ui.css" />
+    <!-- The link to the CSS that the grid needs -->
+    <link rel="stylesheet" type="text/css" media="screen" href="jqGrid/css/ui.jqgrid.css" />
     <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8" />
+    <title>Hello, world!</title>
 </head>
 <body>
     <div class="container-fluid h-100">
@@ -15,20 +27,19 @@
             <div class="col-md-4"> </div>
             <div class="col-md-4 p-4 m-4 d-flex">
                 <form class="form border rounded p-4 card " id="myForm" role="form">
-                    <h4 class="text-center">Регистрация</h4>
-                    <hr>
                     <div class="form-group">
+                        <h4 class="text-center">Регистрация</h4>
                         <label for="name">Ваше имя:</label>
-                        <input type="text" name="name" class="form-control" id="name">
+                        <input type="name" name="name" class="form-control" id="name" placeholder="Имя">
                     </div>
                     <div class="form-group">
-                        <label>Фамилия:</label>
-                        <input type="text" name="lastname" class="form-control" id="last">
+                        <label for="lastname">Фамилия:</label>
+                        <input type="lastname" name="lastname" class="form-control" id="lastname" placeholder="Фамилия">
                     </div>
                     <label for="date">Дата рождения</label>
                     <div class="row">
                         <div class="col-xs-4 col-md-4">
-                            <select class="form-control" name="day" id="day">
+                            <select class="form-control" id="day">
                                 <option value="День">День</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -64,11 +75,11 @@
                             </select>
                         </div>
                         <div class="col-xs-4 col-md-4">
-                            <select class="form-control" name="month" id="month">
+                            <select class="form-control" id="month">
                                 <option value="Месяц">Месяц</option>
-                                <option value="Январь">Январь</option>
-                                <option value="Февраль">Февраль</option>
-                                <option value="Март">Март</option>
+                                <option value="Апрель">Январь</option>
+                                <option value="Апрель">Февраль</option>
+                                <option value="Апрель">Март</option>
                                 <option value="Апрель">Апрель</option>
                                 <option value="Май">Май</option>
                                 <option value="Июнь">Июнь</option>
@@ -92,7 +103,7 @@
                     <label>Город</label>
                     <div class="row form-group">
                         <div class="col-xs-12 col-md-12">
-                            <select class="form-control">
+                            <select class="form-control" id="city">
                                 <option value="Город">Выберите город</option>
                                 <option>Москва</option>
                                 <option>Санкт-Петербург</option>
@@ -102,11 +113,19 @@
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary btn-block">Отправить</button>
                 </form>
+                </div>
+            <div class="col-md-4 ">
             </div>
-            <div class="col-md-4"> </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <table id="grid"></table>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+        </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
     <script src="javascript/script.js"></script>
 </body>
