--- a/indexMass.html
+++ b/indexMass.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <div id="test">
+    <div id="divMass">
         <p>Вывод массива</p>
     </div>
     <script src="javascript/collection.js"></script>
